<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.casualearningsv3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.example.casualearningsv3.ui.dashboard.DashboardFragment"
        android:label="@string/title_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/navigation_jobs"
        android:name="com.example.casualearningsv3.ui.notifications.NotificationsFragment"
        android:label="@string/title_jobs"
        tools:layout="@layout/fragment_jobs" />
</navigation>