<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor">

    <ImageView
        android:id="@+id/highlightView"
        android:layout_width="402dp"
        android:layout_height="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homeview" />

    <TextView
        android:id="@+id/HighlightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="92dp"
        android:text="@string/highlightView"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/highlightView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HighlightValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlightValueView"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/highlightView"
        app:layout_constraintEnd_toEndOf="@+id/highlightView"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/highlightView"
        app:layout_constraintTop_toBottomOf="@+id/HighlightView"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/welcomeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/welcomeView"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highlightView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/upcomingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/upcoming"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highlightView"
        app:layout_constraintVertical_bias="0.546" />

</androidx.constraintlayout.widget.ConstraintLayout>